--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -101,7 +101,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     opacity: 1;
     transform-origin: left center;
 
-    @apply px-0 lg:px-4 pt-8 pb-18 z-10 lg:max-w-[92%] mx-auto relative;
+    @apply px-0 lg:px-4 pt-8 pb-10 lg:pb-18 z-10 lg:max-w-[92%] mx-auto relative;
   }
 
   @media (min-width: 64rem) {
