--- a/apps/web/src/components/BrowserHero.astro
+++ b/apps/web/src/components/BrowserHero.astro
@@ -151,17 +151,17 @@ const leanPresets = Object.fromEntries(
       this.iframeActive = true;
     },
   }"
-  class="browser will-change-transform mt-0 not-content relative z-10 h-[calc(100svh_-_var(--spacing)_*_18)] rounded-t-2xl overflow-clip flex flex-col"
+  class="browser will-change-transform mt-0 not-content relative z-10 h-[calc(100svh_-_var(--spacing)_*_18)] rounded-t-lg lg:rounded-t-2xl overflow-clip flex flex-col"
 >
   <div
-    class="bg-input/40 dark:bg-input/30 backdrop-blur-xl not-content px-5 pt-2 flex"
+    class="bg-input/40 dark:bg-input/30 backdrop-blur-xl not-content px-5 lg:pt-2 flex"
   >
-    <div class="hidden md:flex items-center gap-x-2 mb-1.75">
+    <div class="hidden lg:flex items-center gap-x-2 mb-1.75">
       <div class="size-3 bg-muted-foreground/20 rounded-full"></div>
       <div class="size-3 bg-muted-foreground/20 rounded-full"></div>
       <div class="size-3 bg-muted-foreground/20 rounded-full"></div>
     </div>
-    <div class="md:ml-18 flex items-center">
+    <div class="md:ml-18 hidden lg:flex items-center">
       <button
         type="button"
         data-key={componentsShowreel.theme}
@@ -182,7 +182,7 @@ const leanPresets = Object.fromEntries(
         <span class="hidden lg:block">bejamas/ui components</span>
         <span class="block lg:hidden">components</span>
       </button>
-      <div class="flex items-center justify-center gap-x-1 ml-1">
+      <div class="hidden lg:flex items-center justify-center gap-x-1 ml-1">
         {
           tabs.map((tab, i) => (
             <button
