--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -10,7 +10,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
       "Clean, lightweight Astro UI components built with Tailwind v4 and zero dependencies. Copy-paste the snippet into your project and fully own the code.",
     template: "splash",
     hero: {
-      title: `The UI system for Astro. Copy. <em class="font-serif relative inline-block pr-0.5"><div class="absolute top-0.5 lg:top-1 w-full pointer-events-none h-8 lg:h-12 border-2 border-accent"><span class="absolute -left-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -left-2 -bottom-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -bottom-2 size-2 border-2 border-accent"></span></div>Customize.</em> Ship.`,
+      title: `The UI system for Astro. Copy. <em class="font-serif relative inline-block pr-0.5"><div class="absolute top-0.5 lg:top-1 w-full pointer-events-none h-8 md:h-12 border-2 border-accent"><span class="absolute -left-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -left-2 -bottom-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -bottom-2 size-2 border-2 border-accent"></span></div>Customize.</em> Ship.`,
       actions: [
         {
           text: "Get Started",
