fix(docs): remove links from demos

--- a/apps/web/src/pages/health.astro
+++ b/apps/web/src/pages/health.astro
@@ -27,7 +27,7 @@ import { ArrowDownIcon, MenuIcon } from "@lucide/astro";
 
       <ul slot="links" class="flex col-span-6 px-8 items-center space-x-2">
         <li>
-          <Button as="a" href="/" class="bg-accent font-serif"
+          <Button as="a" href="#" class="bg-accent font-serif"
             >Join the waitlist
             <Badge variant="default" class="font-sans"
               ><span class="size-1.5 rounded-full mr-0.5 bg-current"></span>2026
@@ -35,7 +35,7 @@ import { ArrowDownIcon, MenuIcon } from "@lucide/astro";
           </Button>
         </li>
         <li>
-          <Button as="a" href="/" variant="secondary" class="font-serif"
+          <Button as="a" href="#" variant="secondary" class="font-serif"
             >Log in</Button
           >
         </li>
