--- a/apps/web/src/pages/fintech.astro
+++ b/apps/web/src/pages/fintech.astro
@@ -47,27 +47,27 @@ const faq = [
         class="hidden lg:flex col-span-8 items-center justify-center space-x-2"
       >
         <li>
-          <Button as="a" href="/" variant="ghost" class="text-base"
+          <Button as="a" href="#" variant="ghost" class="text-base"
             >Developers</Button
           >
         </li>
         <li>
-          <Button as="a" href="/" variant="ghost" class="text-base"
+          <Button as="a" href="#" variant="ghost" class="text-base"
             >Business</Button
           >
         </li>
         <li>
-          <Button as="a" href="/" variant="ghost" class="text-base"
+          <Button as="a" href="#" variant="ghost" class="text-base"
             >Resources</Button
           >
         </li>
         <li>
-          <Button as="a" href="/" variant="ghost" class="text-base"
+          <Button as="a" href="#" variant="ghost" class="text-base"
             >Pricing</Button
           >
         </li>
         <li>
-          <Button as="a" href="/" variant="ghost" class="text-base"
+          <Button as="a" href="#" variant="ghost" class="text-base"
             >Contact</Button
           >
         </li>
@@ -227,31 +227,31 @@ const faq = [
         class="col-span-3 text-lg [&_.title]:text-xl [&_.title]:font-medium"
         title="How it works"
         items={[
-          { label: "Blog", href: "/blog" },
-          { label: "Documentation", href: "/docs" },
-          { label: "Pricing", href: "/pricing" },
-          { label: "Support", href: "/support" },
+          { label: "Blog", href: "#" },
+          { label: "Documentation", href: "#" },
+          { label: "Pricing", href: "#" },
+          { label: "Support", href: "#" },
         ]}
       />
       <LinkGroup
         title="Information"
         class="col-span-3 text-lg [&_.title]:text-xl [&_.title]:font-medium"
         items={[
-          { label: "Home", href: "/" },
-          { label: "About", href: "/about" },
-          { label: "Contact", href: "/contact" },
-          { label: "Careers", href: "/careers" },
-          { label: "Press", href: "/press" },
+          { label: "Home", href: "#" },
+          { label: "About", href: "#" },
+          { label: "Contact", href: "#" },
+          { label: "Careers", href: "#" },
+          { label: "Press", href: "#" },
         ]}
       />
       <LinkGroup
         title="Company"
         class="col-span-3 text-lg [&_.title]:text-xl [&_.title]:font-medium"
         items={[
-          { label: "About", href: "/about" },
-          { label: "Contact", href: "/contact" },
-          { label: "Careers", href: "/careers" },
-          { label: "Press", href: "/press" },
+          { label: "About", href: "#" },
+          { label: "Contact", href: "#" },
+          { label: "Careers", href: "#" },
+          { label: "Press", href: "#" },
         ]}
       />
     </div>
