--- a/apps/web/src/pages/ui-demo.astro
+++ b/apps/web/src/pages/ui-demo.astro
@@ -28,7 +28,7 @@ import Dialog from "@bejamas/ui/components/Dialog.astro";
 
 <BlockExampleLayout theme="default">
   <section
-    class="max-w-7xl pt-0 px-0 pb-10 md:pt-10 lg:py-20 mx-auto md:px-5 grid grid-cols-1 md:grid-cols-8 lg:grid-cols-12 gap-10"
+    class="max-w-7xl pt-0 px-0 pb-10 md:pt-10 lg:py-20 mx-auto sm:px-5 grid grid-cols-1 md:grid-cols-8 lg:grid-cols-12 gap-10"
   >
     <div class="col-span-4 space-y-6">
       <h1 class="text-6xl font-medium leading-none">Aa</h1>
