--- a/apps/web/src/pages/blocks/cta/03.astro
+++ b/apps/web/src/pages/blocks/cta/03.astro
@@ -7,14 +7,7 @@ import { ArrowRight } from "@lucide/astro";
 
 <BlockExampleLayout>
   <div>
-    <Card variant="ghost" class="gap-8 py-8 px-8 rounded-none">
-      <Card part="media" class="rounded-none">
-        <img
-          alt="Happy pet"
-          aria-hidden="true"
-          src="https://images.unsplash.com/photo-1759223293091-f4c757c79f6c?q=80&w=1536&h=660&auto=format&fit=crop"
-        />
-      </Card>
+    <Card variant="ghost" class="py-8 px-8 rounded-none bg-[url(https://images.unsplash.com/photo-1759223293091-f4c757c79f6c?q=80&w=1536&h=660&auto=format&fit=crop)] bg-no-repeat">
       <Card part="content" class="flex flex-col items-center justify-center p-4 md:py-32">
         <Card part="title" class="text-3xl md:text-6xl">Your Wealth. Fully accounted</Card>
         <Card part="description" class="mt-6 text-center max-w-[60ch]">A powerful combination of efficiency, quality and flexibility for anyone looking to streamline their design workflow.</Card>
