feat(starlight-theme): change imports

--- a/packages/starlight-theme-bejamas/src/overrides/Header.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Header.astro
@@ -9,7 +9,7 @@ import ThemeSelect from "virtual:starlight/components/ThemeSelect";
 
 import options from "virtual:starlight-theme-bejamas/user-config";
 
-import Button from "virtual:starlight-theme-bejamas/components/Button.astro";
+import { Button } from "virtual:starlight-theme-bejamas/components/button";
 /**
  * Render the `Search` component if Pagefind is enabled or the default search component has been overridden.
  */
